# chatbot

./: docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py  models.py
telegram_lib/: schema.py  telegram.py
