[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
sqlalchemy = "^2.0.23"
fastapi = "^0.105.0"
pydantic-settings = "^2.1.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
